src/objects/Candidate_Restrictions__c.object
<CustomObject>
    <fields>
        <fullName>Domain__c</fullName>
        <description>Email domain - everything after the @ for candidate email addresses.</description>
        <label>Domain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Emails__c</fullName>
        <inlineHelpText>If the majority of email addresses in the domain are allowed, list those that are excluded here.</inlineHelpText>
        <label>Exclude Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Emails__c</fullName>
        <inlineHelpText>If only a few email addresses for the domain are allowed, list them here comma seperated.</inlineHelpText>
        <label>Include Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Candidate Restriction</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Candidate Restrictions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>